# Meticulous

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.agent  Dockerfile.met-api  Dockerfile.met-controller  Dockerfile.operator  Dockerfile.sqlx-migrate  _typos.toml  docker-compose.yml  justfile  openapi.json  rust-toolchain.toml
crates/met-agent/: Cargo.toml
crates/met-agent/src/: config.rs  error.rs  executor.rs  heartbeat.rs  job_claim.rs  lib.rs  main.rs  nats_connect.rs  output_drain.rs  output_seal.rs  process_watcher.rs  registration.rs  script_exec_hints.rs  seccomp_exec.rs  security.rs  step_log.rs  workflow_outputs.rs  workspace_archive.rs
crates/met-agent/src/backend/: container.rs  mod.rs  native.rs
crates/met-agent/src/telemetry/: mod.rs  net_flow.rs  stream.rs
crates/met-agent/tests/: integration_tests.rs
crates/met-api/: Cargo.toml
crates/met-api/src/: ci_bootstrap.rs  config.rs  error.rs  github_scm.rs  lib.rs  main.rs  openapi.rs  pipeline_execution.rs  project_access.rs  scheduling_hints.rs  state.rs  stored_secret_policy.rs  trigger_sync.rs  workflow_diagnostics.rs  workspace_presigner.rs
crates/met-api/src/auth/: api_token.rs  app_jwt.rs  jwt.rs  mod.rs  password.rs  rbac.rs
crates/met-api/src/extractors/: app_installation.rs  auth.rs  mod.rs  pagination.rs  request_id.rs  session_or_app.rs
crates/met-api/src/middleware/: cors.rs  credential_rate_limit.rs  logging.rs  mod.rs  rate_limit.rs
crates/met-api/src/routes/: admin.rs  admin_platform_health.rs  admin_workflows.rs  agents.rs  artifacts.rs  auth.rs  dashboard.rs  debug.rs  environments.rs  health.rs  integration.rs  members.rs  meticulous_apps.rs  mod.rs  oauth.rs  oidc_provider.rs  orgs.rs  pipeline_check.rs  pipeline_matrix.rs  pipelines.rs  platform_settings.rs  projects.rs  runs.rs  secrets.rs  security.rs  stored_secret_policy.rs  stored_secrets.rs  tokens.rs  triggers.rs  variables.rs  webhooks.rs  websocket.rs  workflow_sync.rs  workflows.rs  workflows_catalog.rs  workspace_config.rs
crates/met-api/src/tasks/: data_retention_task.rs  mod.rs  workflow_sync_task.rs
crates/met-cli/: Cargo.toml
crates/met-cli/src/: api_client.rs  config.rs  context.rs  main.rs  output.rs
crates/met-cli/src/auth/: keyring_store.rs  login.rs  mod.rs
crates/met-cli/src/commands/: admin.rs  agents.rs  auth.rs  config.rs  debug.rs  mod.rs  org.rs  pipeline_check.rs  pipelines.rs  project.rs  runs.rs  (+5 more)
crates/met-controller/: Cargo.toml
crates/met-controller/src/: config.rs  error.rs  grpc.rs  health.rs  jwt.rs  lib.rs  log_archive.rs  main.rs  nats.rs  nats_jwt.rs  oidc_workload_token.rs  registry.rs
crates/met-controller/tests/: grpc_register.rs  integration_tests.rs
crates/met-core/: Cargo.toml
crates/met-core/src/: config.rs  error.rs  events.rs  fuzzy.rs  ids.rs  lib.rs  output_ipc.rs  proc_net_tcp.rs  redact.rs  string_util.rs  tokens.rs
crates/met-engine/: Cargo.toml
crates/met-engine/src/: affinity.rs  artifacts.rs  cache.rs  cel.rs  context.rs  error.rs  events.rs  executor.rs  lib.rs  log_streaming.rs  output_crypto.rs  persistence.rs  retry.rs  scheduler.rs  secrets.rs  state.rs  workspace_snapshots.rs
crates/met-engine/tests/: integration_tests.rs
crates/met-lint/: Cargo.toml
crates/met-lint/src/: lib.rs
crates/met-logging/: Cargo.toml
crates/met-logging/src/: aggregator.rs  archive_codec.rs  blast_radius.rs  capture.rs  lib.rs  redactor.rs  sbom.rs  shipper.rs  tools.rs
crates/met-objstore/: Cargo.toml
crates/met-objstore/src/: config.rs  error.rs  lib.rs  multipart.rs  paths.rs  presigned.rs  s3.rs  traits.rs  usage.rs
crates/met-operator/: Cargo.toml
crates/met-operator/crds/: meticulous.dev_agentpools.yaml
crates/met-operator/src/: crd.rs  error.rs  lib.rs  main.rs  reconciler.rs
crates/met-parser/: Cargo.toml
crates/met-parser/src/: affinity.rs  dag.rs  error.rs  hash_files.rs  ir.rs  lib.rs  parser.rs  providers.rs  schema.rs  semver.rs  span.rs  variable.rs  workflow.rs  workspace_transfer.rs
crates/met-parser/tests/: demo_workflow_repo.rs  e2e_test.rs  parser_tests.rs
crates/met-proto/: Cargo.toml  build.rs
crates/met-proto/src/: lib.rs
crates/met-secret-resolve/: Cargo.toml
crates/met-secret-resolve/src/: error.rs  hints.rs  lib.rs  resolve.rs
crates/met-secrets/: Cargo.toml
crates/met-secrets/src/: audit.rs  error.rs  github_app.rs  lib.rs  masking.rs  oidc.rs  oidc_workload_keys.rs  rbac.rs  stored_crypto.rs  syscall_audit.rs  traits.rs  types.rs
crates/met-secrets/tests/: integration_tests.rs
crates/met-store/: Cargo.toml
crates/met-store/migrations/: 001_initial_schema.sql  002_agent_system.sql  003_rbac_system.sql  004_pipeline_engine.sql  005_security.sql  006_token_description.sql  007_webhooks.sql  008_debug_rate_limit.sql  009_log_cache.sql  010_join_tokens_enrollment.sql  011_join_token_description_history.sql  012_agents_join_token_on_delete_set_null.sql  013_agent_drain_missed_heartbeats.sql  014_password_must_change.sql  015_agents_pool_tags.sql  016_builtin_secrets_scope_and_metadata.sql  017_execution_telemetry.sql  018_pipeline_scm.sql  019_job_run_ir_ids.sql  020_job_runs_log_path.sql  021_reconcile_stale_jobs_for_terminal_runs.sql  022_variables_pipeline_scope.sql  023_runs_parent_run.sql  024_runs_parent_not_self.sql  025_run_network_connections_binary.sql  026_job_run_definition_snapshots.sql  027_meticulous_apps.sql  028_log_cache_step_segment.sql  029_job_run_agent_snapshot.sql  030_workflow_catalog_trust.sql  031_job_run_output_wrap.sql  032_pipeline_run_workflow_outputs.sql  033_builtin_secrets_propagate_to_projects.sql  034_runs_webhook_remote_addr.sql  035_users_last_login_at.sql  036_webhook_deliveries_and_targets.sql  037_webhook_registrations_payload_mapping.sql  038_webhook_generic_inbound_auth.sql  039_webhook_and_trigger_provenance.sql  040_platform_policy_access.sql  (+18 more)
crates/met-store/src/: error.rs  lib.rs  pool.rs
crates/met-telemetry/: Cargo.toml
crates/met-telemetry/src/: config.rs  exporters.rs  lib.rs  metrics.rs  middleware.rs  propagation.rs  tracing.rs
(+361 files in other folders)
