[package]
name = "met-agent"
description = "Build agent binary for Meticulous CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "met-agent"
path = "src/main.rs"

[lib]
name = "met_agent"
path = "src/lib.rs"

[dependencies]
met-core = { workspace = true }
met-proto = { workspace = true }
met-secrets = { workspace = true }
async-nats = { workspace = true }
nkeys = "0.4.5"
async-trait = "0.1"
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
futures = "0.3"
hostname = "0.4"
prost = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sysinfo = "0.32"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "process", "fs", "io-util"] }
tokio-stream = "0.1"
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
rand.workspace = true
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["time", "process"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
