[package]
name = "met-agent"
description = "Build agent binary for Meticulous CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "met-agent"
path = "src/main.rs"

[[bin]]
name = "met-output"
path = "src/bin/met-output.rs"

[lib]
name = "met_agent"
path = "src/lib.rs"

[dependencies]
met-core = { workspace = true }
met-proto = { workspace = true }
met-secrets = { workspace = true }
async-nats = { workspace = true }
nkeys = "0.4.5"
async-trait = "0.1"
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
futures = "0.3"
hostname = "0.4"
prost = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sysinfo = "0.32"
if-addrs = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dialoguer = "0.11"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
rand.workspace = true
sha2 = "0.10"
aes-gcm = { workspace = true }
hkdf = { workspace = true }
hex = "0.4"
regex = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
