[package]
name = "met-api"
description = "REST API server for Meticulous CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "met_api"
path = "src/lib.rs"

[[bin]]
name = "met-api"
path = "src/main.rs"

[dependencies]
met-core = { workspace = true }
met-store = { workspace = true }
met-engine = { workspace = true }
met-controller = { workspace = true }
axum = { workspace = true, features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hmac = "0.12"
http = "1"
bytes = "1"
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
