[package]
name = "met-controller"
description = "Agent controller (registration, health, job dispatch) for Meticulous CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "met-controller"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
met-core = { workspace = true }
met-store = { workspace = true }
met-proto = { workspace = true }
met-secrets = { workspace = true }
met-secret-resolve = { workspace = true }
met-parser = { workspace = true }
met-objstore = { workspace = true }
met-logging = { workspace = true }
bytes = { workspace = true }
async-nats = { workspace = true }
async-stream = "0.3"
async-trait = "0.1"
chrono = { workspace = true }
hex = { workspace = true }
jsonwebtoken = "9"
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
nats-io-jwt = "0.1.1"
nkeys = "0.4.5"

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }

[lints]
workspace = true
