[package]
name = "met-core"
description = "Core types, error handling, and configuration for Meticulous CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]

[lints]
workspace = true
