[package]
name = "met-operator"
description = "Kubernetes operator for Meticulous CI/CD agent provisioning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "met-operator"
path = "src/main.rs"

[lib]
name = "met_operator"
path = "src/lib.rs"

[dependencies]
met-core = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
k8s-openapi = { version = "0.24", features = ["v1_31"] }
kube = { version = "0.98", features = ["runtime", "derive"] }
schemars = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
