[package]
name = "met-parser"
description = "Pipeline definition parsing (YAML, schema validation, DAG construction) for Meticulous CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
met-core = { workspace = true }
async-trait = "0.1"
humantime = "2.1"
indexmap = { version = "2.0", features = ["serde"] }
regex = "1.10"
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
indoc = "2.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
