[package]
name = "met-proto"
description = "Protobuf definitions and generated code for Meticulous gRPC services"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
