[package]
name = "met-secret-resolve"
description = "Pipeline secret validation and resolution for Meticulous"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
met-core = { workspace = true }
met-parser = { workspace = true }
met-secrets = { workspace = true }
met-store = { workspace = true }
indexmap = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
