[package]
name = "met-secrets"
description = "Secrets broker with external provider integrations for Meticulous CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
met-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
jsonwebtoken = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
rand = "0.8"
wiremock = "0.6"

[lints]
workspace = true
